fix(core): fix unnecessary scroll in fullsize dialogs on mobile (#1190)

--- a/projects/cdk/components/dialog-host/dialog-host.style.less
+++ b/projects/cdk/components/dialog-host/dialog-host.style.less
@@ -20,6 +20,11 @@
     overflow: overlay;
 }
 
+.dialog {
+    bottom: auto;
+    height: 100%;
+}
+
 .overlay {
     height: 100vh;
     pointer-events: none;
